--- a/Tools/debug/openocd-h7.cfg
+++ b/Tools/debug/openocd-h7.cfg
@@ -4,6 +4,6 @@
 source [find interface/stlink.cfg]
 # replace the stm32f4x with the right value for
 # your microcontroller
-source [find target/stm32h7x_dual_bank.cfg]
+source [find target/stm32h7x.cfg]
 init
-$_CHIPNAME.cpu0 configure -rtos auto
+$_CHIPNAME.cpu0 configure -rtos chibios
