--- a/.gitignore
+++ b/.gitignore
@@ -87,7 +87,7 @@ cscope.out
 cscope.po.out
 dataflash.bin
 eeprom.bin
-index.html
+!index.html
 logs/
 mav.log
 mav.log.raw
@@ -145,4 +145,3 @@ dumpstack_*out
 build.tmp.binaries/
 tasklist.json
 modules/esp_idf
-!scripts/fs/index.html
