--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,6 +26,7 @@
         "memory": "cpp",
         "string_view": "cpp",
         "ranges": "cpp",
-        "cstdio": "cpp"
+        "cstdio": "cpp",
+        "source_location": "cpp"
     }
 }
