--- a/.github/workflows/build_artifacts.yml
+++ b/.github/workflows/build_artifacts.yml
@@ -66,7 +66,7 @@ jobs:
         run: |
           PATH="/github/home/.local/bin:$PATH"
           cd target
-          ./waf configure --board ${{matrix.config}}
+          ./waf configure --board ${{matrix.config}} --enable-luasocket
           ./waf AP_Periph
 
       - name: Get short SHA
